--- a/public/home/home.html
+++ b/public/home/home.html
@@ -1,1 +1,1 @@
-<div> test: {{home.test}} </div>
+<div> <img src="/images/home.jpg" class="img-responsive center-block" alt="Responsive image"> <h4 class="text-center">COMING SOON</h4> </div>
