font, text blur

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -1,1 +1,1 @@
-<div> <img src="/images/home.jpg" class="img-responsive center-block" alt="Responsive image"> <h4 class="text-center">COMING SOON</h4> </div>
+<div class="row"> <div class="col-md-2"></div> <div class="col-md-8"> <h4 class="text-center text-blur">COMING SOON</h4> <img src="/images/img_1-2x.jpg" class="img-responsive center-block" alt="Image not loaded!"> </div> <div class="col-md-2"></div> </div>
