--- a/public/home/home.html
+++ b/public/home/home.html
@@ -1,1 +1,1 @@
-<div class="row"> <div class="col-md-2"></div> <div class="col-md-8"> <h4 class="text-center text-blur">COMING SOON</h4> <img src="/images/img_1-2x.jpg" class="img-responsive center-block" alt="Image not loaded!"> </div> <div class="col-md-2"></div> </div>
+<div class="home-view"> <div class="col-md-2 col-sm-2"></div> <div class="col-md-8 col-sm-8"> <img src="/images/img_1-2x.jpg" class="img-responsive center-block" alt="Image not loaded!" ng-style="{ 'max-height': home.imageHeight }"> </div> <div class="col-md-2 col-sm-2"></div> </div>
